# SpeedCheck

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  speed_check_client.py
