[tool.poetry]
name = "speedcheck"
version = "0.1.0"
description = "A simple Internet speed monitoring application with a client-server architecture."
authors = ["Eugene Chekan <eugene.chekan@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speedtest-cli = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
